Fix color contrast between green/white

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,6 @@
 // Colors //
 $blue: #2c3e50;
-$green: #18bc9c;
+$green: #1f816e;
 
 // Fonts //
 $font-size-base: 15px;
